[package]
name = "banana_man"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
imagesize = "0.10.0"
libm = "0.2.3"
macroquad = "0.3.23"
once_cell = "1.13.0"
rand = "0.8.5"

[profile.dev.package.'*']
opt-level = 3